src/scss/06_components/block/_header-language-links.scss
/*copypasta*/

$-mmenu-active-border: $spacing-quarter;
$-mmenu-border-color: $color-black-20;
$-transition-duration: 0.2s;
$-back-icon-bg-size: 40px;
$-back-icon-size: $spacing-double;
$-itemlink-target-size: $spacing-quadruple;
$-footerlink-target-size: 44px;


/* new stuff*/
$-panel-height:100vh;

.block__headerlanguagelinks {
  align-self: stretch;
  background-color: $color-silver-light;
  border-bottom: 1px solid $color-black-20;
  border-left: 1px solid $color-black-20;
  display:flex;
  // background-color: $color-silver-light;
  // border-bottom: 1px solid $color-black-20;
  grid-area: otherlangs;
  order: 3;
  padding-left: $spacing;
  transition: margin-top 0.3s ease 1s; // The transition delay here combats a bit for the accidental scroll ups during scrolling
  width: calc(100% + #{$spacing-double});
  z-index: 0;

  @include breakpoint($breakpoint-m) {

    background-color: transparent;
    border-bottom: 0 none;
    border-top: none;
    margin-left: auto;
    order: 2;
    padding: 0;
    width: auto;
  }

  // &.scroll-up {
  //   margin-top: -52px;
  //   transition-delay: 0s; // Transition delay should be 0 when hiding the switcher

  //   @include breakpoint($breakpoint-m) {
  //     margin-top: 0;
  //     transition-duration: 0s;
  //   }
  // }
}

.headerlanguagelinks__item {
  
}

.headerlanguagelinks__toggle {
  align-items: center;
  display: flex;
  height:100%;
  
  text-decoration: none;
  &::before {
    @include pseudo-icon('globe', 24px, black);
    @include hover-link-arrow-transition;
    content:'';
    grid-area: icon;
    // margin-top: 0.5 * ($-back-icon-bg-size - $-back-icon-size);
  }

}

.headerlanguagelinks__toggle span {
  padding-left:4px;
  &::before {
    @include hover-link-arrow-transition;
    content:'';
    grid-area: icon;
  }
}

.headerlanguagelinks__toggle--open span {
  &::before {
    @include pseudo-icon('angle-down', 24px, black);
  }
}

.headerlanguagelinks__toggle--close span {
  &::before {
    @include pseudo-icon('angle-up', 24px, black);
  }
}

.headerlanguagelinks__wrapper {
  background-color: $color-silver;
  grid-area:menu;
  height:$-panel-height;
  left:0;
  max-height:$-panel-height;
  max-width:100vw;
  min-width:100vw;
  overflow:hidden;
  padding: $spacing-double $spacing;
  position: absolute;

}

.headerlanguagelinks__wrapper,
.headerlanguagelinks__toggle--close {
  display:none;
}

#morelangs { background:red;
  height:2rem;
  scroll-margin-top: 100vh;
}

#morelangs:target  {

  & ~ * .headerlanguagelinks__wrapper {
    display:block;
  }

  & ~ * .headerlanguagelinks__toggle--close {
    display:flex;
  }

  & ~ * .headerlanguagelinks__toggle--open {
    display:none;
  }
}

.headerlanguagelinks__link {
  display:block;
  margin-bottom: $spacing-half;
  text-decoration: none;
}

.headerlanguagelinks__link--nolink {
  display:block;
  font-weight:bold;
}

.headerlanguagelinks__link[data-is-external="true"] {
 &::after {
    @include pseudo-icon('link-external', 24px, black);
  }
}

